--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "next": "15.3.4",
     "openai": "^5.6.0",
     "react": "^19.0.0",
