--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "eslint": "9.30.0",
     "@types/sentiment": "^5.0.4",
-    "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "tailwindcss": "^4",
     "typescript": "^5"
