fix: add missing autoprefixer for PostCSS

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@types/node": "^20",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
-    "eslint": "9.30.0",
     "@types/sentiment": "^5.0.4",
+    "autoprefixer": "^10.4.21",
+    "eslint": "9.30.0",
     "eslint-config-next": "14.2.3",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
